readability fix to dropdown hover

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,9 +13,9 @@
 	--secondary-darker: #87CEEB;
 	--button-text: #003B49;
 	--button-text-hover: #00869F;
-	--accent-one: #FFA500;
+	--accent-one: #004F63;
 	--accent-two: #FF6B6B;
-	--accent-three: #32CD32;
+	--accent-three: #FFA500;
 	--accent-four: #87CEED;
 	--background: #F0F0F0;
 	--accent-filter: brightness(0) saturate(100%) invert(70%) sepia(50%) saturate(6388%) hue-rotate(323deg) brightness(109%) contrast(102%);
